welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:22: error: unclosed comment
	/*for(k <- 0 to 1){
        ^Diagonal:2: error: Missing closing brace `}' assumed here
override def run() {
^Diagonal:2: error: expected start of definition
override def run() {
         ^